# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "hello"
version = "0.1.0"
edition = "2021"

[profile.dev]
# optimize level default 0
# opt-level = 0

# Abort on panic in release mode
[profile.release]
# optimize level default 3
# opt-level = 3
panic = 'abort'

[dependencies]